--- a/testcase/locallink.html
+++ b/testcase/locallink.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <title>locallink</title>
-<a href="file:///">/</a>
-<a href="file:///C:/">C:/</a>
+<a href="file:///">file:///</a>
+<a href="file:///C:/">file:///C:/</a>
