--- a/testcase/localfilelink.html
+++ b/testcase/localfilelink.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>locallink</title>
+<title>localfilelink</title>
 <a href="file:///">file:///</a>
 <a href="file:///C:/">file:///C:/</a>
