Never expire cookie

--- a/testcases/cookie.html
+++ b/testcases/cookie.html
@@ -3,5 +3,5 @@
 <title>cookie test</title>
 <script type="application/javascript"><!--
 document.write("document.cookie: " + document.cookie);
-document.cookie = "lastAccessTime=" + new Date();
+document.cookie = "lastAccessTime=" + new Date() + "; max-age=" + Infinity;
 --></script>
