--- a/testcases/cookie.html
+++ b/testcases/cookie.html
@@ -3,5 +3,5 @@
 <title>cookie test</title>
 <script type="application/javascript"><!--
 document.write("document.cookie: " + document.cookie);
-document.cookie = "lastAccessTime=" + new Date() + "; max-age=" + Infinity;
+document.cookie = "lastAccessTime=" + new Date() + "; expires=Fri, 31 Dec 9999 23:59:59 GMT";
 --></script>
