--- a/testcases/block_allow_downloads.html
+++ b/testcases/block_allow_downloads.html
@@ -7,7 +7,7 @@
       .mar file will be BLOCKED automatically.
       </p>
       <p>
-        This behavior is changed whether <tt>dom.block_download_insecure</tt>
+        This behavior is changed whether <tt>dom.block_download_in_sandboxed_iframes</tt>
         is set to true or false. (true by default)
       </p>
       <p>
