Update steps for Security-16

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -225,6 +225,13 @@ a:visited {color:#00a;}
   <td>未署名のアドオン (Admin-4)</td>
 </tr>
 
+<tr><th colspan="2">V</th></tr>
+<tr>
+  <th><a target='_blank' href="./video.html">video.html</a></th>
+  <td>フルスクリーン表示の可否 (Security-16)</td>
+</tr>
+
+
 <tr><th colspan="2">W</th></tr>
 <tr>
   <th><a target='_blank' href="https://www.clear-code.com/">https://www.clear-code.com/</a></th>
