Use testcase on the Web

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -187,6 +187,10 @@ a:visited {color:#00a;}
   <td>サブリソースに対するReferrer-Policyの緩和 (Privacy-60/Privacy-62)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="https://piro.sakura.ne.jp/test/notification.html">https://piro.sakura.ne.jp/test/notification.html</a></th>
+  <td>プッシュ通知の使用 (Script-2)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="./popupblock.html">popupblock.html</a></th>
   <td>広告などのポップアップの表示の可否 (Security-4)</td>
 </tr>
