--- a/testcases/index.html
+++ b/testcases/index.html
@@ -38,6 +38,10 @@ a:visited {color:#00a;}
   <td>画像のキャッシュの確認 (Privacy-36), 検索エンジンの自動検出 (Websearch-1)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="./address.html">address.html</a></th>
+  <td>住所情報の保存 (Privacy-69)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="./alert.html">alert.html</a></th>
   <td>スクリプトによる頻繁なalertの可否 (Script-1)</td>
 </tr>
