--- a/testcases/httplog.html
+++ b/testcases/httplog.html
@@ -37,7 +37,7 @@ else {
   let fail = prefetchText.match(/Predictor::Predict.*\n.*called on parent process/g) || [];
   if (success.length == 0 &&
       fail.length == 0) {
-    console.log('No predection is logged.');
+    console.log('No prediction is logged.');
   }
   else {
     console.log({ success: success.length, fail: fail.length });
