Add verification steps for External-3

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -226,6 +226,10 @@ a:visited {color:#00a;}
   <th><a target='_blank' href="./textfield.html">textfield.html</a></th>
   <td>スペルチェック機能 (UI-6)</td>
 </tr>
+<tr>
+  <th><a target='_blank' href="./transparent.png">transparent.png</a></th>
+  <td>透過部分を含む画像 (External-3)</td>
+</tr>
 
 <tr><th colspan="2">U</th></tr>
 <tr>
