Add verification steps for Network options

--- a/testcases/links.html
+++ b/testcases/links.html
@@ -14,6 +14,9 @@
   //--></script>
 </ul>
 <ul>
-  <li><a href="#" onclick="window.open('https://www.clear-code.com/', 'ClearCode,. Inc. Website');">window.open</a>
-  <li><a href="#" onclick="window.open('https://www.clear-code.com/', 'ClearCode,. Inc. Website', 'width=200,height=200');">window.open（サイズ指定あり）</a>
+  <li><a href="#" onclick="window.open('https://www.clear-code.com/', 'ClearCode,. Inc. Website'); return false">window.open</a>
+  <li><a href="#" onclick="window.open('https://www.clear-code.com/', 'ClearCode,. Inc. Website', 'width=200,height=200'); return false">window.open（サイズ指定あり）</a>
+  <li><a href="#" onclick="window.open('http://example.com/', 'ClearCode,. Inc. Website'); return false">window.open（HTTP）</a>
+  <li><a href="#" onclick="window.open('http://example.com/', 'ClearCode,. Inc. Website', 'width=200,height=200'); return false">window.open（サイズ指定あり,
+  HTTP））</a>
 <ul>
