Add verification steps for privacy options

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -42,6 +42,10 @@ a:visited {color:#00a;}
   <td>住所情報の保存 (Privacy-69)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="https://alanhogan.github.io/web-experiments/3rd/third-party-cookies.html">https://alanhogan.github.io/web-experiments/3rd/third-party-cookies.html</a></th>
+  <td>サードパーティーCookieの受け容れ可否 (Privacy-76)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="./alert.html">alert.html</a></th>
   <td>スクリプトによる頻繁なalertの可否 (Script-1)</td>
 </tr>
