Fill verification steps for Security options

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -153,6 +153,10 @@ a:visited {color:#00a;}
   <td>プッシュ通知の可否 (Privacy-2)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="http://labs.w0s.jp/http/authorization/">http://labs.w0s.jp/http/authorization/</a></th>
+  <td>HTTPで接続中のページからのHTTP接続でのBASIC認証の使用可否 (Security-66)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="https://labs.w0s.jp/http/referrer-policy/unsafe-url/">https://labs.w0s.jp/http/referrer-policy/unsafe-url/</a></th>
   <td>トップレベルのReferrer-Policyの緩和 (Privacy-61/Privacy-63)</td>
 </tr>
@@ -179,6 +183,10 @@ a:visited {color:#00a;}
 <tr>
   <th><a target='_blank' href="./noopener.html">noopener.html</a></th>
   <td>target=_blankリンクにrel=noopenerを自動付与するか (Script-8)</td>
+</tr>
+<tr>
+  <th><a target='_blank' href="https://no-sct.badssl.com/">https://no-sct.badssl.com/</a></th>
+  <td>TLS証明書の透明性の要求 (Security-65)</td>
 </tr>
 
 <tr><th colspan="2">P</th></tr>
