Add verification steps for Startup and Ui options

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -274,6 +274,10 @@ a:visited {color:#00a;}
   <td>リーダービュー機能の使用 (Ui-5)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="https://www.clear-code.com/blog/2020/9/24.html">https://www.clear-code.com/blog/2020/9/24.html</a></th>
+  <td>タブ切り替え時のPicture-in-Pictureへの自動切り替え (Ui-20)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="https://www.clear-code.com/temp/block_script_with_wrong_mime.html">https://www.clear-code.com/temp/block_script_with_wrong_mime.html</a></th>
   <td>不正なMIME Typeで読み込まれたスクリプト (Security-30)</td>
 </tr>
