Fill verification steps for new options added at Firefox ESR140 (#71)
* Fill verification steps for Appearance options

* Add verification steps for External-3

* Fill verification steps for Location options

* Add verification steps for Network options

* Use the term "panel menu"

* Fix typo

* Add verification steps for privacy options

* Fill verification steps for Security options

* Add verification steps for Startup and Ui options

* Update PDF testcase

* Tab groups is now enabled by default

* Fix mismatch option labels

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -42,6 +42,10 @@ a:visited {color:#00a;}
   <td>住所情報の保存 (Privacy-69)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="https://alanhogan.github.io/web-experiments/3rd/third-party-cookies.html">https://alanhogan.github.io/web-experiments/3rd/third-party-cookies.html</a></th>
+  <td>サードパーティーCookieの受け容れ可否 (Privacy-76)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="./alert.html">alert.html</a></th>
   <td>スクリプトによる頻繁なalertの可否 (Script-1)</td>
 </tr>
@@ -149,6 +153,10 @@ a:visited {color:#00a;}
   <td>プッシュ通知の可否 (Privacy-2)</td>
 </tr>
 <tr>
+  <th><a target='_blank' href="http://labs.w0s.jp/http/authorization/">http://labs.w0s.jp/http/authorization/</a></th>
+  <td>HTTPで接続中のページからのHTTP接続でのBASIC認証の使用可否 (Security-66)</td>
+</tr>
+<tr>
   <th><a target='_blank' href="https://labs.w0s.jp/http/referrer-policy/unsafe-url/">https://labs.w0s.jp/http/referrer-policy/unsafe-url/</a></th>
   <td>トップレベルのReferrer-Policyの緩和 (Privacy-61/Privacy-63)</td>
 </tr>
@@ -175,6 +183,10 @@ a:visited {color:#00a;}
 <tr>
   <th><a target='_blank' href="./noopener.html">noopener.html</a></th>
   <td>target=_blankリンクにrel=noopenerを自動付与するか (Script-8)</td>
+</tr>
+<tr>
+  <th><a target='_blank' href="https://no-sct.badssl.com/">https://no-sct.badssl.com/</a></th>
+  <td>TLS証明書の透明性の要求 (Security-65)</td>
 </tr>
 
 <tr><th colspan="2">P</th></tr>
@@ -226,6 +238,10 @@ a:visited {color:#00a;}
   <th><a target='_blank' href="./textfield.html">textfield.html</a></th>
   <td>スペルチェック機能 (UI-6)</td>
 </tr>
+<tr>
+  <th><a target='_blank' href="./transparent.png">transparent.png</a></th>
+  <td>透過部分を含む画像 (External-3)</td>
+</tr>
 
 <tr><th colspan="2">U</th></tr>
 <tr>
@@ -256,6 +272,10 @@ a:visited {color:#00a;}
 <tr>
   <th><a target='_blank' href="https://www.clear-code.com/blog/2019/9/9.html">https://www.clear-code.com/blog/2019/9/9.html</a></th>
   <td>リーダービュー機能の使用 (Ui-5)</td>
+</tr>
+<tr>
+  <th><a target='_blank' href="https://www.clear-code.com/blog/2020/9/24.html">https://www.clear-code.com/blog/2020/9/24.html</a></th>
+  <td>タブ切り替え時のPicture-in-Pictureへの自動切り替え (Ui-20)</td>
 </tr>
 <tr>
   <th><a target='_blank' href="https://www.clear-code.com/temp/block_script_with_wrong_mime.html">https://www.clear-code.com/temp/block_script_with_wrong_mime.html</a></th>
