Replace the test link with one to work more appropriately 18147-23

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -274,7 +274,7 @@ a:visited {color:#00a;}
   <td>リーダービュー機能の使用 (Ui-5)</td>
 </tr>
 <tr>
-  <th><a target='_blank' href="https://www.clear-code.com/blog/2020/9/24.html">https://www.clear-code.com/blog/2020/9/24.html</a></th>
+  <th><a target='_blank' href="https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html">https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html</a></th>
   <td>タブ切り替え時のPicture-in-Pictureへの自動切り替え (Ui-20)</td>
 </tr>
 <tr>
