Move a test link to the right initial of K

--- a/testcases/index.html
+++ b/testcases/index.html
@@ -147,6 +147,12 @@ a:visited {color:#00a;}
   <td>詐欺サイト (Security-6)</td>
 </tr>
 
+<tr><th colspan="2">K</th></tr>
+<tr>
+  <th><a target='_blank' href="https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html">https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html</a></th>
+  <td>タブ切り替え時のPicture-in-Pictureへの自動切り替え (Ui-20)</td>
+</tr>
+
 <tr><th colspan="2">L</th></tr>
 <tr>
   <th><a target='_blank' href="https://labs.othersight.jp/webpushtest/">https://labs.othersight.jp/webpushtest/</a></th>
@@ -272,10 +278,6 @@ a:visited {color:#00a;}
 <tr>
   <th><a target='_blank' href="https://www.clear-code.com/blog/2019/9/9.html">https://www.clear-code.com/blog/2019/9/9.html</a></th>
   <td>リーダービュー機能の使用 (Ui-5)</td>
-</tr>
-<tr>
-  <th><a target='_blank' href="https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html">https://kakonacl.xsrv.jp/h265_vp9/h264_mediacoder_html5.html</a></th>
-  <td>タブ切り替え時のPicture-in-Pictureへの自動切り替え (Ui-20)</td>
 </tr>
 <tr>
   <th><a target='_blank' href="https://www.clear-code.com/temp/block_script_with_wrong_mime.html">https://www.clear-code.com/temp/block_script_with_wrong_mime.html</a></th>
